reimplement the build system to use CMake - renamed a ton of types in order to avoid -fpermissive errors when compiled with GNU C++ compiler

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ play/*
 tests/*
 !**/*.zion
 *.zx
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+Makefile.bak
+CTestTestfile.cmake
+Testing/
