--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - docker tag zion:0.1 zion:latest
 
 script:
-  docker run --rm --name zion-build -e LLVM_LINK_BIN=llvm-link-3.9 -e CLANG_BIN=clang-3.9 -v `pwd`:/opt/zion --privileged -it zion:latest ./build-and-run-tests.sh
+  docker run --rm --name zion-build -e LLVM_LINK_BIN=llvm-link-3.9 -e CLANG_BIN=clang-3.9 -v `pwd`:/opt/zion --privileged -it zion:latest ./make-and-run-tests.sh
