implement sorted map as a binary tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,8 @@ add_test(
 foreach(_test_name
 		test_hello_world
 		test_recursion
-		test_mike)
+		test_mike
+		test_map)
 	add_test(
 		NAME ${_test_name}
 		COMMAND ./zionc run ${_test_name})
