remove a build system hack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ foreach(_rt_module
 
 	add_custom_command(
 		OUTPUT ${_rt_module}.llir
-		COMMAND clang-3.7 -S -Wall -emit-llvm ${option_flags} ${_rt_module}.c -o ${_rt_module}.llir
+		COMMAND clang -S -Wall -emit-llvm ${option_flags} ${_rt_module}.c -o ${_rt_module}.llir
 		DEPENDS ${_rt_module}.c)
 
 endforeach(_rt_module)
