push through ptr[managed[struct[]]] semantics - remove "ref" from several places - fix some tests - improve some error messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,6 @@ foreach(_test_name
 		test_map
 		test_mike
 		test_recursion
-		test_if_dtor)
+		test_if_finalizer)
 	add_test(NAME ${_test_name} COMMAND python expect.py -p ${_test_name})
 endforeach(_test_name)
