--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ add_executable(zionc
 
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
-llvm_map_components_to_libnames(llvm_libs support core irreader mcjit)
+llvm_map_components_to_libnames(llvm_libs support core irreader mcjit target)
 
 # Link against LLVM libraries
 target_link_libraries(zionc ${llvm_libs})
