--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(Zion)
 include_directories(BEFORE .)
 add_definitions(-DZION_DEBUG)
 
-find_package(LLVM REQUIRED CONFIG
-	HINTS /usr/local/Cellar/llvm/3.9.1
-	HINTS /usr/local/Cellar/llvm@3.7/3.7.1/lib/llvm-3.7)
+find_package(LLVM REQUIRED CONFIG)
+# HINTS /usr/local/Cellar/llvm/3.9.1
+# HINTS /usr/local/Cellar/llvm@3.7/3.7.1/lib/llvm-3.7)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
