--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,22 @@ endif()
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-add_compile_options(-std=c++14 -g -O3 ${option_flags})
+foreach(_rt_module
+		rt_float
+		rt_int
+		rt_posix
+		rt_str
+		rt_typeid
+		)
+	add_custom_target(
+		${_rt_module}.o
+		ALL
+		COMMAND clang -c ${CMAKE_SOURCE_DIR}/src/${_rt_module}.c -o ${PROJECT_BINARY_DIR}/${_rt_module}.o
+		BYPRODUCTS ${PROJECT_BINARY_DIR}/${_rt_module}.o
+		)
+endforeach(_rt_module)
+
+add_compile_options(-std=c++14 -g -O0 ${option_flags})
 
 add_executable(zion
 	src/ast.cpp
