--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,${LLVM_INSTALL_
 add_executable(zion
 	src/ast.cpp
 	src/atom.cpp
+	src/binding.cpp
 	src/bound_type.cpp
 	src/bound_var.cpp
 	src/builtins.cpp
