get eight queens basically compiling - get name assignments in pattern matching working - get pattern matching translation working somewhat - get return checking working better

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(zion
 	src/builtins.cpp
 	src/compiler.cpp
 	src/dbg.cpp
+	src/defn_id.cpp
 	src/disk.cpp
 	src/env.cpp
 	src/identifier.cpp
