enable match expressions (not just statements) - fix phi node construction for nested ternary/conditional expressions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(zion
 	src/defn_id.cpp
 	src/disk.cpp
 	src/env.cpp
+	src/eval.cpp
 	src/gen.cpp
 	src/identifier.cpp
 	src/infer.cpp
