--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,3 +72,34 @@ add_test(
 add_test(
 	NAME expect_tests
 	COMMAND ./expect-tests.sh .)
+
+
+option(TIDY "Compile with clang-tidy" OFF)
+if(TIDY)
+	find_program(
+	  CLANG_TIDY_EXE
+	  NAMES "clang-tidy"
+	  DOC "Path to clang-tidy executable"
+	  )
+
+	if(NOT CLANG_TIDY_EXE)
+	  message(STATUS "clang-tidy not found.")
+	else()
+	  message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
+	  set(DO_CLANG_TIDY "${CLANG_TIDY_EXE}" "-checks=*,-clang-analyzer-alpha.*")
+	endif()
+
+	set_target_properties(
+	  zion PROPERTIES
+	  CXX_STANDARD 14
+	  CXX_STANDARD_REQUIRED ON
+	  COMPILE_FLAGS "${WARNING_FLAGS}"
+	)
+
+	if(CLANG_TIDY_EXE)
+	  set_target_properties(
+		zion PROPERTIES
+		CXX_CLANG_TIDY "${DO_CLANG_TIDY}"
+	  )
+	endif()
+endif()
