wip: trying to get through more monomorphization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ foreach(test
 	   	test_basic
 	   	test_pass
 	   	test_strings
+	   	test_inferred_return_type
 	   	test_match_int
 	   	test_newtype
 	   	test_newtype_tuple)
