start to stabilize mptc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,14 @@ message(STATUS "LLVM installation prefix is ${LLVM_INSTALL_PREFIX}")
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-if(NOT DEFINED DEBUG)
-	message("Compiling in Release mode...")
-	add_compile_options(-std=c++14 -g -O3 ${option_flags})
-else()
+option(DEBUG "Build a Debug build" ON)
+if(DEBUG)
 	message("Compiling in Debug mode...")
 	add_definitions(-DZION_DEBUG)
 	add_compile_options(-std=c++14 -g -O0 ${option_flags})
+else()
+	message("Compiling in Release mode...")
+	add_compile_options(-std=c++14 -g -O3 ${option_flags})
 endif()
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,${LLVM_INSTALL_PREFIX}/lib")
 
