implement tarjan's algorithm for use in ordering type checking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(zion
 	src/scheme_resolver.cpp
 	src/scope.cpp
 	src/solver.cpp
+    src/tarjan.cpp
 	src/token.cpp
 	src/token_queue.cpp
 	src/tracked_types.cpp
