--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ message(STATUS "LLVM installation prefix is ${LLVM_INSTALL_PREFIX}")
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
+add_compile_options(-Wno-error=init-list-lifetime)
 option(DEBUG "Build a Debug build" OFF)
 if(DEBUG)
 	message("Compiling in Debug mode...")
