--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -52,7 +52,9 @@ jobs:
     # 📚 
 
     - run: |
+       ./install-deps.sh
        make DEBUG= test
+       
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
